--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>測試</title>           <!-- 網站名稱顯示在tab上 -->
+        <title>貿多實業有限公司</title>           <!-- 網站名稱顯示在tab上 -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="./css/style.css" rel="stylesheet">	
+        <link href="./css/style.css" rel="stylesheet">
+        <link href="./css/headerAndFooter.css" rel="stylesheet">	
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         
     </head>
@@ -22,7 +23,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav" >
                       <li class="nav-item"><a class="nav-link active" href="./index.html" >簡介</a></li>
-                      <li class="nav-item"><a class="nav-link" href="#" >產品介紹</a></li>
+                      <li class="nav-item"><a class="nav-link" href="./product.html">產品介紹</a></li>
                       <li class="nav-item"><a class="nav-link" href="#">機器介紹</a></li>
                       <li class="nav-item"><a class="nav-link" href="#">聯絡我們</a></li>
                     </ul>
@@ -96,15 +97,20 @@
     <footer class="footer text-center position-relative">
       <div class="container">
           <div class="row">
-            <div class="col-md-6" style="align-items: center;">
+            <div class="col-md-4">
               <img src="./圖片/logo.png">
             </div>
-            <div class="col-md-6" style="align-items: center;">
+            <div class="col-md-4">
+              <div class="contact">
                 <p>地址 : 台中市潭子區豐興路2段359號</p>
                 <p>TEL : (04)25361762</p>
                 <p>FAX : (04)25361174</p>
                 <p>統一編號 : 97331603</p>
                 <p>Email : md.o252359@msa.hinet.net</p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3638.7823590530415!2d120.72063591479359!3d24.21440088436274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346919dccf264c39%3A0x2b807ce1c53807fb!2zNDI35Y-w5Lit5biC5r2t5a2Q5Y2A6LGQ6IiI6Lev5LqM5q61MzU56Jmf!5e0!3m2!1szh-TW!2stw!4v1664522502743!5m2!1szh-TW!2stw" width="75%" height="75%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
       </div>
