modify slide and add new product

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Motorz Car Repair Free Bootstrap Responsive Template</title>
+<title>貿多實業有限公司</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="" />
-<meta name="author" content="http://webthemez.com" />
 <!-- css -->
 <link href="css/bootstrap.min.css" rel="stylesheet" />
 <link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
@@ -165,6 +164,17 @@
 							<img src="圖片/102709.jpg" alt="">
 						</li>
 						<!-- End Item Project -->
+						<!-- Item Project and Filter Name -->
+						<li class="item-thumbs col-lg-3 design" data-id="id-0" data-type="icon">
+							<!-- Fancybox - Gallery Enabled - Title - Full Image -->
+							<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="牛皮外箱隔板" href="圖片/108432.jpg">
+							<span class="overlay-img"></span>
+							<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-search"></i></span>
+							</a>
+							<!-- Thumb Image and Description -->
+							<img src="圖片/108432.jpg" alt="">
+							</li>
+							<!-- End Item Project -->
 					</ul>
 					</section>
 				</div>
