--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
 <!-- <link href="css/jcarousel.css" rel="stylesheet" /> -->
 <link href="css/flexslider.css" rel="stylesheet" />
-<link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
+<!-- <link href="js/owl-carousel/owl.carousel.js" rel="stylesheet"> -->
 <link href="css/style.css" rel="stylesheet" />
 
 </head>
@@ -164,7 +164,7 @@
 <script src="js/jquery.fancybox-media.js"></script>
 <script src="js/portfolio/jquery.quicksand.js"></script>
 <script src="js/portfolio/setting.js"></script>
-<script src="js/jquery.flexslider.js"></script>
+<script src="js/flexslider/jquery.flexslider.js"></script>
 <script src="js/animate.js"></script>
 <script src="js/custom.js"></script>
 <script src="js/owl-carousel/owl.carousel.js"></script>
