--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 <!-- css -->
 <link href="css/bootstrap.min.css" rel="stylesheet" />
 <link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
-<!-- <link href="css/jcarousel.css" rel="stylesheet" /> -->
+<link href="css/jcarousel.css" rel="stylesheet" />
 <link href="css/flexslider.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
  
@@ -35,8 +35,8 @@
 					<div class="navbar-collapse collapse ">
 						<ul class="nav navbar-nav">
 							<li><a href="index.html">首頁</a></li>
-							<li class="active"><a href="portfolio.html">產品介紹</a></li>
-							<li><a href="services.html">機器介紹</a></li>
+							<li><a href="services.html">箱型介紹</a></li>
+							<li class="active"><a href="portfolio.html">產品展示</a></li>
 							<li><a href="contact.html">聯絡我們</a></li>
 						</ul>
 					</div>
@@ -213,7 +213,6 @@
     ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="js/jquery.js"></script>
-<script src="js/jquery.jcarousel.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.fancybox.pack.js"></script>
