--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,8 @@
 					<div class="navbar-collapse collapse ">
 						<ul class="nav navbar-nav">
 							<li><a href="index.html">首頁</a></li>
-							<li><a href="portfolio.html">產品介紹</a></li>
-							<li><a href="services.html">機器介紹</a></li>
+							<li><a href="services.html">箱型介紹</a></li>
+							<li><a href="portfolio.html">產品展示</a></li>
 							<li class="active"><a href="contact.html">聯絡我們</a></li>
 						</ul>
 					</div>
