--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <!-- css -->
 <link href="css/bootstrap.min.css" rel="stylesheet" />
 <link href="css/fancybox/jquery.fancybox.css" rel="stylesheet">
-<!-- <link href="css/jcarousel.css" rel="stylesheet" /> -->
+<link href="css/jcarousel.css" rel="stylesheet" />
 <link href="css/flexslider.css" rel="stylesheet" />
-<!-- <link href="js/owl-carousel/owl.carousel.js" rel="stylesheet"> -->
+<link href="js/owl-carousel/owl.carousel.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet" />
 
 </head>
@@ -30,8 +30,8 @@
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html">首頁</a></li>
-						<li><a href="portfolio.html">產品介紹</a></li>
-                        <li><a href="services.html">機器介紹</a></li>
+                        <li><a href="services.html">箱型介紹</a></li>
+						<li><a href="portfolio.html">產品展示</a></li>
                         <li><a href="contact.html">聯絡我們</a></li>
                     </ul>
                 </div>
@@ -156,15 +156,15 @@
 <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
 <!-- javascript
     ================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
 <script src="js/jquery.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
-<script src="js/jquery.jcarousel.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.fancybox.pack.js"></script>
 <script src="js/jquery.fancybox-media.js"></script>
 <script src="js/portfolio/jquery.quicksand.js"></script>
 <script src="js/portfolio/setting.js"></script>
-<script src="js/flexslider/jquery.flexslider.js"></script>
+<script src="js/jquery.flexslider.js"></script>
 <script src="js/animate.js"></script>
 <script src="js/custom.js"></script>
 <script src="js/owl-carousel/owl.carousel.js"></script>
