--- a/services.html
+++ b/services.html
@@ -23,7 +23,8 @@
 
 	<!-- start header -->
 		<header>
-        <div class="navbar navbar-default navbar-static-top">
+			<link rel="shortcut icon" href="/favicon.ico">
+			<div class="navbar navbar-default navbar-static-top">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -58,36 +59,36 @@
         <!-- Service Blcoks -->
         <div class="row service-v1 margin-bottom-40">
             <div class="col-md-4 md-margin-bottom-40">
-               <img class="img-responsive" src="img/service1.jpg" alt="">   
-                <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>        
+               <img class="img-responsive" src="圖片/a1.jpg" alt="">   
+                <h3>A1型紙箱</h3>
+                <p>市面上最通用的箱型，尺寸彈性且使用方便</p>        
             </div>
             <div class="col-md-4">
-                <img class="img-responsive" src="img/service2.jpg" alt="">            
-                <h3>Mobile Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>        
+                <img class="img-responsive" src="圖片/pizza.jpg" alt="">            
+                <h3>披薩盒</h3>
+                <p>最常見的軋盒型式，也常做成彩盒 必須開刀模</p>        
             </div>
             <div class="col-md-4 md-margin-bottom-40">
-              <img class="img-responsive" src="img/service3.jpg" alt="">  
-                <h3>Responsive Design</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>        
+              <img class="img-responsive" src="圖片/one.jpg" alt="">  
+                <h3>一片式</h3>
+                <p>用於包裝面積大而較扁的物品</p>        
             </div>
         </div>
 		<div class="row service-v1 margin-bottom-40">
             <div class="col-md-4 md-margin-bottom-40">
-               <img class="img-responsive" src="img/service1.jpg" alt="">   
-                <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>        
+               <img class="img-responsive" src="圖片/hand.jpg" alt="">   
+                <h3>手提盒</h3>
+                <p>一體成型手提紙盒，美觀又方便</p>        
             </div>
             <div class="col-md-4">
-                <img class="img-responsive" src="img/service2.jpg" alt="">            
-                <h3>Mobile Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>        
+                <img class="img-responsive" src="圖片/c.png" alt="">            
+                <h3>C型盒</h3>
+                <p>工業包裝常見箱型，通常可分為上蓋和下蓋，可組裝成盒，或搭配A7型使用</p>        
             </div>
             <div class="col-md-4 md-margin-bottom-40">
-              <img class="img-responsive" src="img/service3.jpg" alt="">  
-                <h3>Responsive Design</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>        
+              <img class="img-responsive" src="圖片/a7.png" alt="">  
+                <h3>A7型紙盒</h3>
+                <p>類似A1型紙箱,只有一組盒蓋，另一側無蓋</p>        
             </div>
         </div>
 		<div class="row service-v1 margin-bottom-40">
