--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <div id="wrapper">
 	<!-- start header -->
 	<header>
+        <link rel="shortcut icon" href="/favicon.ico">
         <div class="navbar navbar-default navbar-static-top">
             <div class="container">
                 <div class="navbar-header">
