add extra carton

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <script src="js/jquery.flexslider.js"></script>
 <script src="js/animate.js"></script>
 <script src="js/custom.js"></script>
-<script src="js/owl-carousel/owl.carousel.js"></script>
+<script src="https://kit.fontawesome.com/8079213676.js" crossorigin="anonymous"></script>
+<!-- <script src="js/owl-carousel/owl.carousel.js"></script> -->
 </head>
 <body>
 <div id="wrapper">
@@ -102,16 +103,19 @@
                 </div>
             </div>
             <div class="col-md-7"> 
-                    <h2 class="section-title">關於我們</h2><br>
+                    <h1 class="section-title">關於我們</h1><br>
 					<h4>貿多紙業已成立30餘年，秉持著誠信經營與長期的服務提供客戶良好穩定品質。</h4>
                     <h4 style="color: purple;">提供客戶滿意的品質與服務，提高包裝價值，做出優良的品質。品質確實，價格合理。</h4>
 					<h4 style="color: blue;">生產各式紙箱外銷，客製化內外瓦楞紙箱、彩色紙箱紙盒、水果蔬菜箱、隔板、PE版箱，等客戶訂做尺寸產品。</h4>
                     
             </div>
         </div>  
+
+        
+
+        <h2 style="text-align: center;">工廠內部實景</h2>
 		<div class="row"> 	 
 		<section id="projects">
-			<h3>工廠內部</h3>
             <div class="col-md-3 col-sm-3">
                 <div class="project">
                     <img src="圖片/IMG_20220528_143743.jpg" class="img-responsive" alt="">
