--- a/services.html
+++ b/services.html
@@ -11,12 +11,16 @@
 <link href="css/jcarousel.css" rel="stylesheet" />
 <link href="css/flexslider.css" rel="stylesheet" />
 <link href="css/style.css" rel="stylesheet" />
- 
-<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
+<script src="js/jquery.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.fancybox.pack.js"></script>
+<script src="js/jquery.fancybox-media.js"></script> 
+<script src="js/portfolio/jquery.quicksand.js"></script>
+<script src="js/portfolio/setting.js"></script>
+<script src="js/jquery.flexslider.js"></script>
+<script src="js/animate.js"></script>
+<script src="js/custom.js"></script>
 </head>
 <body>
 <div id="wrapper">
@@ -57,64 +61,52 @@
 	<section id="content">
 		<div class="container content">		
         <!-- Service Blcoks -->
-        <div class="row service-v1 margin-bottom-40">
-            <div class="col-md-4 md-margin-bottom-40">
+        <div class="row service-v1 margin-bottom-40" style="margin: 3%;">
+            <div class="col-md-3 md-margin-bottom-40">
                <img class="img-responsive" src="圖片/a1.jpg" alt="">   
                 <h3>A1型紙箱</h3>
                 <p>市面上最通用的箱型，尺寸彈性且使用方便</p>        
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <img class="img-responsive" src="圖片/pizza.jpg" alt="">            
                 <h3>披薩盒</h3>
                 <p>最常見的軋盒型式，也常做成彩盒 必須開刀模</p>        
             </div>
-            <div class="col-md-4 md-margin-bottom-40">
+            <div class="col-md-3 md-margin-bottom-40">
               <img class="img-responsive" src="圖片/one.jpg" alt="">  
                 <h3>一片式</h3>
                 <p>用於包裝面積大而較扁的物品</p>        
             </div>
+            <div class="col-md-3 md-margin-bottom-40">
+                <img class="img-responsive" src="圖片/hand.jpg" alt="">   
+                 <h3>手提盒</h3>
+                 <p>一體成型手提紙盒，美觀又方便</p>        
+             </div>
         </div>
-		<div class="row service-v1 margin-bottom-40">
-            <div class="col-md-4 md-margin-bottom-40">
-               <img class="img-responsive" src="圖片/hand.jpg" alt="">   
-                <h3>手提盒</h3>
-                <p>一體成型手提紙盒，美觀又方便</p>        
-            </div>
-            <div class="col-md-4">
+		<div class="row service-v1 margin-bottom-40" style="margin: 3%;">
+            
+            <div class="col-md-3">
                 <img class="img-responsive" src="圖片/c.png" alt="">            
                 <h3>C型盒</h3>
                 <p>工業包裝常見箱型，通常可分為上蓋和下蓋，可組裝成盒，或搭配A7型使用</p>        
             </div>
-            <div class="col-md-4 md-margin-bottom-40">
+            <div class="col-md-3 md-margin-bottom-40">
               <img class="img-responsive" src="圖片/a7.png" alt="">  
                 <h3>A7型紙盒</h3>
                 <p>類似A1型紙箱,只有一組盒蓋，另一側無蓋</p>        
             </div>
-        </div>
-		<div class="row service-v1 margin-bottom-40">
-            <div class="col-md-4 md-margin-bottom-40">
-               <img class="img-responsive" src="img/service1.jpg" alt="">   
-                <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>        
+            <div class="col-md-3 md-margin-bottom-40">
+               <img class="img-responsive" src="圖片/bottom.png" alt="">   
+                <h3>插底盒</h3>
+                <p>底部4片紙板組合，上蓋為掀蓋型式，常做為禮品包裝用</p>        
             </div>
-            <div class="col-md-4">
-                <img class="img-responsive" src="img/service2.jpg" alt="">            
-                <h3>Mobile Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>        
-            </div>
-            <div class="col-md-4 md-margin-bottom-40">
-              <img class="img-responsive" src="img/service3.jpg" alt="">  
-                <h3>Responsive Design</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>        
+            <div class="col-md-3">
+                <img class="img-responsive" src="圖片/51u1Bn4-uJL._AC_SL1001_.jpg" alt="">            
+                <h3>A5型紙盒</h3>
+                <p>上蓋及下蓋重疊,增加保護</p>        
             </div>
         </div>
-		<div class="row service-v1 margin-bottom-40">
-            <div class="col-md-4 md-margin-bottom-40">
-               <img class="img-responsive" src="img/service1.jpg" alt="">   
-                <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>        
-            </div>
-        </div>
+		
         <!-- End Service Blcoks -->
 		
     </div>
@@ -149,15 +141,6 @@
 <!-- javascript
     ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="js/jquery.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.fancybox.pack.js"></script>
-<script src="js/jquery.fancybox-media.js"></script> 
-<script src="js/portfolio/jquery.quicksand.js"></script>
-<script src="js/portfolio/setting.js"></script>
-<script src="js/jquery.flexslider.js"></script>
-<script src="js/animate.js"></script>
-<script src="js/custom.js"></script>
+
 </body>
 </html>
